# aoc2021

./: README.md  day14_FIXED.ipynb  day_1.ipynb  day_10.ipynb  day_11.ipynb  day_12.ipynb  day_12p2.ipynb  day_13.ipynb  day_14-Copy1.ipynb  day_14.ipynb  day_15.ipynb  day_15_npmap.ipynb  day_15_proc.ipynb  day_15part2.ipynb  day_16.ipynb  day_17.ipynb  day_18.ipynb  day_2.ipynb  day_5.ipynb  day_6-Copy1.ipynb  day_6.ipynb  day_7.ipynb  day_8.ipynb  day_9.ipynb  pyproject.toml  template.ipynb
code/: day_16.py  day_16_p2.py  day_18.py
data/: input_15_2.txt
