[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = ""
authors = ["satrya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
jupyterlab = "^3.4.7"
sympy = "^1.11.1"
Pillow = "^9.3.0"
matplotlib = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
